--- a/css/personalwebpagestyle.css
+++ b/css/personalwebpagestyle.css
@@ -1,122 +1,43 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-size: cover;
-    background: #333;
-    overflow: hidden;
+    margin: 60px auto;
+    width: 70%;
 }
-
-.box {
-    width: 500px;
-    background: rgba(0, 0, 0, 0.4);
-    padding: 40px;
-    text-align: center;
-    margin: auto;
-    margin-top: 2%;
-    color: white;
-    font-family: 'Roboto', 'Didact Gothic', sans-serif;
-}
-
-.box-img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-}
-
-.box h1 {
-    font-size: 40px;
-    letter-spacing: 4px;
-    font-weight: 100;
-}
-
-.box h5 {
-    font-size: 20px;
-    letter-spacing: 3px;
-    font-weight: 100;
-}
-
-.box p {
-    text-align: justify;
-}
-
-a:link {
-    color: red;
-}
-
-a:visited {
-    color: light-blue;
-}
-
-a:hover {
-    color: green;
-}
-
-a:active {
-    color: black;
-}
-
-.dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.8s ease;
-}
-
-.active {
-    background-color: #717171;
-}
-
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
-}
-
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-.box li {
-    display: inline-block;
-    margin: 6px;
+nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
     list-style: none;
+    font-weight: bold;
 }
-
-.box li a {
-    color: white;
+nav ul li, footer ul li {
+    display: inline;
+    margin-right: 20px;
+}
+a {
     text-decoration: none;
-    font-size: 60px;
-    transition: all ease-in-out 250ms;
+    color: #999;
+}
+a:hover {
+    text-decoration: underline;
+}
+h1 {
+    font-size: 3em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+p {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+}
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
 }
 
-.box li a:hover {
-    color: #b9b9b9;
+ul.posts { 
+    margin: 20px auto 40px; 
+    font-size: 1.5em;
 }
 
-#resume {
-    background-image: url("public/img/David Blankinship Resume.jpg");
+ul.posts li {
+    list-style: none;
 }
