--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
 	    		<ul>
 	        		<li><a href="mailto:blankin.david@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/dblankin">github.com/dblankin</a></li>
+				<li><a href="https://www.facebook.com/glenn.blankin/timeline?lst=100006341160302%3A100006341160302%3A1548729476">facebook</a></li>
+				<li><a href="https://twitter.com/BlankinDavid">twitter</a></li>
 				</ul>
 			</footer>
 		</body>
