--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,9 +12,9 @@ h1 {
     color: white;
 }
 
-.circular-deer {
+/*.circular-deer {
     display: block;
-    /*margin-left: auto;
+    margin-left: auto;
     margin-right: auto;*/
     
 }   
