--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,9 +19,9 @@ h1 {
     
 }   
 .circular-deer img { 
-    width: 60%; 
+    /*width: 60%; 
     height: 100%; 
-    /*padding-left: 400px;
+    padding-left: 400px;
     padding-right: 400px;*/
     border-radius: 40%;
 }
