--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,12 +12,12 @@ h1 {
     color: white;
 }
 
-/*.circular-deer {
+.circular-deer {
     display: block;
     margin-left: auto;
     margin-right: auto;
     
-}*/   
+}   
 /*.circular-deer img { 
     width: 60%; 
     height: 100%; 
