--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,13 +16,13 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 300px;
+    max-height: 300px;
     
 }   
 /*.circular-deer img { 
     width: 60%; 
     height: 100%; 
-    padding-left: 400px;
-    padding-right: 400px;
     border-radius: 40%;
 }*/
 
