--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -20,9 +20,10 @@ h1 {
     max-height: 300px;
     
 }   
-/*.circular-deer img { 
+@media screen and (max-width: 500px) {
+    .circular-deer img { 
     width: 60%; 
     height: 100%; 
     border-radius: 40%;
-}*/
+}
 
