--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ h1 {
 }   
 @media screen and (max-width: 800px) {
     .circular-deer img { 
-        padding-left: auto;
+        padding-left: 50%;
         padding-right: auto;
         width: 60%; 
         height: 100%; 
