--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,20 +12,25 @@ h1 {
     color: white;
 }
 
-.circular-deer {
+div {
+    width: auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 800px;
-    max-height: 800px;
-    
-}   
-@media screen and (max-width: 800px) {
-    .circular-deer img { 
-        padding-left: 20%;
-        padding-right: 20%;
-        width: 60%; 
-        height: 100%; 
-        border-radius: 50%;
 }
 
+.circular-deer {
+    width: auto;
+    display: block;
+}
+
+@media only screen and (min-width: 414px) {
+    img {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        border-radius: 50%;
+
+    }
+    h1 {
+        font-size: 28px;
+    }
+}
